--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "material-table": "^1.69.3",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-json-view": "^1.21.3",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.12",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "typescript": "4.5.5"
   }
 }
