--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "jsonschema": "^1.4.0",
     "material-table": "^1.69.3",
     "next": "12.0.8",
     "react": "17.0.2",
