--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "dateformat": "^5.0.2",
     "jsonschema": "^1.4.0",
     "material-table": "^1.69.3",
     "next": "12.0.8",
@@ -19,6 +20,7 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.0",
     "@types/node": "17.0.12",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
