--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,6 +48,7 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
       - name: Bygg og push Docker image
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/dev-')
         run: |
             docker build . -f Dockerfile -t ${IMAGE}
             docker push ${IMAGE}
