--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,6 +41,15 @@ jobs:
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
 
+  trivy-docker:
+    permissions:
+      id-token: 'write'
+      security-events: 'write'
+    needs: build-and-publish
+    uses: navikt/flex-github-actions-workflows/.github/workflows/trivy-docker.yml@master
+    with:
+      image: ${{ needs.build-and-publish.outputs.image }}
+    secrets: inherit
 
 
   deploy-to-dev-gcp:
