--- a/package.json
+++ b/package.json
@@ -9,24 +9,27 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "dateformat": "^5.0.2",
-    "jsonschema": "^1.4.0",
-    "material-table": "^1.69.3",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@date-io/core": "^2.13.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@navikt/ds-css": "^5.6.5",
+    "@navikt/ds-react": "^5.6.5",
+    "dateformat": "^5.0.3",
+    "jsonschema": "^1.4.1",
+    "next": "13.5.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-json-view": "^1.21.3",
-    "swr": "^1.1.2"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/dateformat": "^5.0.0",
-    "@types/node": "17.0.12",
-    "@types/react": "17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "typescript": "4.5.5"
+    "@types/node": "20.8.4",
+    "@types/react": "18.2.28",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "eslint": "8.51.0",
+    "eslint-config-next": "13.5.4",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "typescript": "5.2.2"
   }
 }
