--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,61 +1,17 @@
-name: Push
-on: push
+name: workflow
+on:
+  workflow_dispatch:
+  push:
+
 jobs:
-  build-and-publish:
-    name: Bygg, test og push Docker image
-    runs-on: ubuntu-latest
+  felles-workflow:
+    uses: navikt/flex-github-actions-workflows/.github/workflows/next-js-lightweight.yml@dev-only-cluster
     permissions:
       contents: read
       id-token: write
-    outputs:
-      image: ${{ steps.docker-build-push.outputs.image }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - uses: actions/cache@v3
-        with:
-          path: ${{ github.workspace }}/.next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn-lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
-      - name: Install npm dependencies
-        run: yarn
-      - name: Run lint
-        run: yarn lint
-      - name: Build application
-        run: yarn build
-      - name: docker-build-push
-        if: github.ref_name == 'master' || startsWith(github.ref_name, 'dev-')
-        uses: nais/docker-build-push@v0
-        id: docker-build-push
-        with:
-          team: flex
-          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
-          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
-
-
-
-  deploy-to-dev-gcp:
-    if: github.ref_name == 'master' || startsWith(github.ref_name, 'dev-')
-    name: Deploy til dev-gcp
-    runs-on: ubuntu-latest
-    needs: build-and-publish
-    concurrency: deploy-to-dev-gcp
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
-        name: Deploy to dev-gcp
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          IMAGE: ${{ needs.build-and-publish.outputs.image }}
-          CLUSTER: dev-gcp
-          RESOURCE: nais-dev.yaml
+      packages: read
+      actions: read
+      security-events: write
+    secrets: inherit
+    with:
+      dev-only: true
