--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-json-view": "^1.21.3",
+    "react-json-view-lite": "^1.1.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
