--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -1,5 +1,5 @@
-apiVersion: "nais.io/v1alpha1"
-kind: "Application"
+apiVersion: 'nais.io/v1alpha1'
+kind: 'Application'
 metadata:
   name: flex-juridisk-vurdering-test-frontend
   namespace: flex
@@ -30,4 +30,4 @@ spec:
   accessPolicy:
     outbound:
       external:
-      - host: raw.githubusercontent.com
+        - host: raw.githubusercontent.com
