--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -13,7 +13,9 @@ spec:
   replicas:
     min: 1
     max: 2
-    cpuThresholdPercentage: 50
+    scalingStrategy:
+      cpu:
+        thresholdPercentage: 50
   resources:
     limits:
       memory: 128Mi
