--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   felles-workflow:
-    uses: navikt/flex-github-actions-workflows/.github/workflows/next-js-lightweight.yml@master
+    uses: navikt/flex-github-actions-workflows/.github/workflows/next-js-lightweight.yml@main
     permissions:
       contents: read
       id-token: write
